@@ -1,3 +1,8 @@
+Sun Oct 31 10:14:10 UTC 2010  Olli Savia  <ops@iki.fi>
+
+        * ace/config-linux-common.h:
+          Removed some legacy GLIBC 1.x related settings.
+
 Sat Oct 30 10:09:47 UTC 2010  Olli Savia  <ops@iki.fi>
 
         * ace/config-linux-common.h:
